--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ header{
 .navegador ul li a{
     display: block;
     text-decoration: none;
-    color: rgb(0, 0, 0); 
+    color: rgb(255, 255, 255); 
     font-size: 18px;
     align-items: center;
     margin: 10px;
@@ -155,7 +155,7 @@ header{
 }
 .footer ul li a{
     text-decoration: none;
-    color: rgb(22, 14, 1);
+    color: rgb(250, 250, 250);
 }
 /*formuralio*/
 
@@ -305,5 +305,35 @@ header{
 .carousel-control-prev-icon{
     left: 5px;
 }
+.carousel-item{
+    position: relative;
+}
+.carousel-item h6{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+    text-shadow: 0.5px 0.5px 0.5px #634f08;
+}
+.contenedorCarousel{
+    position: relative;
+}
+.tituloCarousel{
+    position: absolute;
+    z-index: 10;
+    top: 50px;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 1.5px #000000;
+}
+.tituloCarousel p{
+    font-size: 18px;
+}
 
-/*tostado*/
+/*Tostado*/
+.tarjetasTostado{
+    margin-bottom: 20px;
+    margin-top: 10px;
+} 
