--- a/scss/_carrusel.scss
+++ b/scss/_carrusel.scss
@@ -1,5 +1,6 @@
 .contenedorCarousel{
     position: relative;
+    padding: 10px;
     .carousel{ 
         .carousel-control-next-icon, .carousel-control-prev-icon{
             background-color:#5e452d;
