--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -1,8 +1,8 @@
 body{
-    background-color: #c5c8ac;
+    background-color: $bg-color-body;
 }
 header{
-    background-color: #414833;
+    background-color: $bg-color-header;
 }
 .imgpesta{
     border-radius: 50%;
