--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -4,6 +4,7 @@
     height: 80px;
     display: flex;
     justify-content: space-between;
+    font-family: $fuente;
     ul{
         list-style: none;
         display: flex;
