--- a/scss/_txtIndex.scss
+++ b/scss/_txtIndex.scss
@@ -4,6 +4,8 @@
     width: 96%;
     padding: 15px;
     margin: 15px 2%;
+    font-family: $fuente;
+    color: black;
     h3{
         text-align: center;
         font-size: 22px;
