--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "reset";
+@import "variables";
 @import "generales";
 @import "navegador";
 @import "footer";
@@ -8,4 +9,5 @@
 @import "tarjetasTostado";
 @import "carrusel";
 @import "formulario";
-
+@import "tarjetasCultivo";
+@import "tarjetasMetodos";
