--- a/scss/_tarjetasMetodos.scss
+++ b/scss/_tarjetasMetodos.scss
@@ -1,16 +1,4 @@
-/*@mixin tarjetasmetodos {
-    background-color: $bg-color-header;
-    border-radius: 5px;
-}
-
-.tarjetasmetodos{
-    @include tarjetasmetodos(
-        background-color
-        border-radius
-    )
-} */
-
-.tarjetasMetodos{
+.metodosIntro{
     background-color: rgb(150, 148, 134);
     border-radius: 5px;  
     padding: 10px;   
@@ -25,12 +13,20 @@
             opacity: 70%;
         }
     }
-    .imgMet2{
+}
+
+.tarjetasMetodos{
+    background-color: rgb(150, 148, 134);
+    border-radius: 5px;  
+    padding: 10px;   
+    margin: 10px;
+    color: $txt-color;
+    height: 740px;
+    .imgMet2, .imgMet3, .imgMet4{
         margin: 10px;
-        height: 500px;
-        object-fit:fill;
+        height: 340px;
+        object-fit: cover;
         overflow: hidden;
-        img{
-        }
     }
 }   
+
