--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -5,4 +5,8 @@
     text-decoration: underline;
     padding: 10px;
     font-family: $fuente;
+    text-shadow: $sombra;
+}
+main div h2{
+    font-family: $fuente;
 }
