--- a/scss/_tarjetasCultivo.scss
+++ b/scss/_tarjetasCultivo.scss
@@ -1,8 +1,13 @@
 .tarjetasCultivo{
-    height: 200px;
+    height: 150px;
     background-color: rgb(214, 209, 202);
     padding: 10px;
     padding-top: 20px;
     font-family: $fuente;
     color: $txt-color;
+}
+@media (max-width: 900px){
+    .tarjetasCultivo{
+        height: 200px;
+    }
 }
