--- a/scss/_carrusel.scss
+++ b/scss/_carrusel.scss
@@ -1,6 +1,7 @@
 .contenedorCarousel{
     position: relative;
     padding: 10px;
+    border-radius: 15px;
     .carousel{ 
         .carousel-control-next-icon, .carousel-control-prev-icon{
             background-color:#5e452d;
