--- a/scss/_tarjetasCultivo.scss
+++ b/scss/_tarjetasCultivo.scss
@@ -5,6 +5,8 @@
     padding-top: 20px;
     font-family: $fuente;
     color: $txt-color;
+    background-color:rgb(150, 148, 134);
+    border-radius: 10px;
 }
 @media (max-width: 900px){
     .tarjetasCultivo{
