--- a/scss/_txtIndex.scss
+++ b/scss/_txtIndex.scss
@@ -1,6 +1,6 @@
 .textoInicio{
     border-radius: 5px;
-    background-color: #936639;
+    background-color: #886b4e;
     width: 96%;
     padding: 15px;
     margin: 15px 2%;
