--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,8 +7,10 @@
 @import "titulos";
 @import "txtIndex";
 @import "imgIndex";
+@import "tarjetasIndex";
 @import "tarjetasTostado";
 @import "carrusel";
 @import "formulario";
 @import "tarjetasCultivo";
 @import "tarjetasMetodos";
+
